objects/User_Service_Center__c/User_Service_Center__c.object-meta.xml
<CustomObject>
    <label>User Service Center</label>
    <nameField>
        <label>Service Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Service Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>