objects/User_Service_Center__c/fields/Manager_of_SC__c.field-meta.xml
<CustomField>
    <fullName>Manager_of_SC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager of SC</label>
    <type>Checkbox</type>
</CustomField>