objects/User_Service_Center__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Center</label>
    <referenceTo>Service_Center__c</referenceTo>
    <relationshipLabel>User Service Centers</relationshipLabel>
    <relationshipName>User_Service_Centers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>